fix list alignments

--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -11,6 +11,11 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 1200px;
 }
 
+ol, ul, li {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 h1 { font-size: 36px; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 22px; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 20px; line-height: 1.3;  letter-spacing: -.1rem; }
@@ -111,38 +116,15 @@ hr {
 }
 */
 
-
-/*//this is presumably how to add a blue bar on top
-.navbar-header {
-  margin: 1%;
-  height: 5px; 
-  width: 100%;
-  color: #0054a4;
-}
-*/
-
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
   color:var(--council-blue);
 	background-color: #d6d6d6;
 	height: 95px;
 }
 
-
-/* change hamburger button border color 
-button.navbar-toggler.navbar-toggler-right {
-  border-color: yellow;
-}*/
-/* change navbar background on collapse 
-@media (max-width: 768px) {
-  nav.navbar {
-    background: --council-black;
-  }
-}*/
-
 .navbar-collapse {
     background-color:var(--council-gray) !important;
 }
-
 
 /*
 .navbar-nav {
@@ -179,8 +161,6 @@ button.navbar-toggler.navbar-toggler-right {
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 	box-shadow: inset 0 1px 1px transparent;
 }
-
-
 
 .leaflet-popup-content {
   margin: 13px 19px;
